fixed css alignment

--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,20 @@ body {
   font-size: 15px;
 }
 
-.card {
+.container {
   background-color: hsl(244, 38%, 16%);
-  margin: 100px auto;
+  width: 100%;
+  display: flex;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+.wrapper {
+  height: 100vh;
+  align-items: center;
+  display: block;
+  margin: 80px 80px;
+  max-width: 800px;
 }
 
 h5 {
@@ -16,7 +27,10 @@ h5 {
 
 p {
   color: hsla(0, 0%, 100%, 0.75);
-  font-size: 9px;
+  font-size: 12px;
+  display: block;
+  margin: 0 auto 0 0;
+  padding: 20px;
 }
 
 strong {
@@ -24,7 +38,6 @@ strong {
 }
 
 .feature {
-  display: inline-block;
   margin: 0 auto 0 0;
   font-size: 15px;
   font-weight: bold;
@@ -36,11 +49,21 @@ strong {
   margin-top: 0 auto 0 0;
 }
 
+.stats {
+  display: inline-block;
+  padding: 20px;
+}
+
 .blend1 {
   background-blend-mode: screen;
   background-image: url("images/image-header-desktop.jpg");
   background-color: hsl(277, 64%, 61%);
   background-size: cover;
+  background-position: center;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto 0 0;
 }
 
 @media (max-width: 375px) {
@@ -48,20 +71,28 @@ strong {
     background-blend-mode: screen;
     background-image: linear-gradient(hsl(hsl(277, 64%, 61%))),
       url("images/image-header-mobile.jpg");
-    height: 250px;
-    width: auto;
+    background-size: auto 749px;
+    background-position: center;
+    height: auto;
+    width: 100%;
+    display: block;
+    margin: 0 auto 0 0;
   }
 
-  .card {
-    width: 18rem;
-  }
-
-  .card-img {
+  img {
     display: flex;
     flex-direction: column-reverse;
   }
-  .wrapper {
+  .container {
     display: flex;
-    flex-direction: row;
+    margin: 20px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .stats-text {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
   }
 }
